--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -38,7 +38,7 @@
     <!-- RIGHT: movie details & summary -->
     <aside class="right-col">
       <div class="poster">
-        <img [src]="movie?.poster" [alt]="movie?.title">
+        <img [src]="movie?.image" [alt]="movie?.title">
       </div>
       <div class="movie-meta">
         <h3>{{ movie?.title }}</h3>
